--- a/product/all.html
+++ b/product/all.html
@@ -1,10 +1,392 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>ALL</title>
+    <link rel="stylesheet" href="../public/css/command.css">
+    <link rel="stylesheet" href="../public/css/all.css">
 </head>
 <body>
+     <div class="navbar_frame">
+        <div class="container">
+            <div class="navbar_top">
+                <a href="index.html">
+                    <img src="../public/images/icons/logo.png" alt="">
+                </a>
+                <div class="nav_search_frame">
+                    <div class="search_box">
+                        <div class="category_list">
+                            <select>
+                                <option value="" selected>All Categories</option>
+                                <option value="">Computer</option>
+                            </select>
+                        </div>
 
+                        <input type="text" placeholder="Search  Products...">
+                    </div>
+                    <div class="search_icon_box">
+                        <img src="../public/images/icons/search.svg" alt="">
+                    </div>
+                </div>
+                <div class="nav_top_menu">
+                    <a href="./order/cart.html">
+                        <div class="top_menu_box">
+                            <div class="box_icon_box">
+                                <img src="../public/images/icons/heart.svg" alt="">
+                            </div>
+                            <div class="box_info_box">
+                                <span>Wishlist</span>
+                                <strong>My items</strong>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="./other/login.html">
+                        <div class="top_menu_box">
+                            <div class="box_icon_box">
+                                <img src="../public/images/icons/vector.svg" alt="">
+                            </div>
+                            <div class="box_info_box">
+                                <span>Sign in</span>
+                                <strong>Account</strong>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="./order/cart.html">
+                        <div class="top_menu_box">
+                            <div class="box_icon_box">
+                                <div class="basket_count">2</div>
+                                <img src="../public/images/icons/shopping-cart.svg" alt="">
+                            </div>
+                            <div class="box_info_box">
+                                <span>$200.99</span>
+                                <strong>My items</strong>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="navbar_bott">
+                <div class="navbar_bott_menu_box">
+                    <div class="browse_box">
+                        <img src="../public/images/icons/browse.svg" alt="">
+                        <span>Browse Categories</span>
+                    </div>
+                    <div class="navbar_route_menu">
+                        <div class="router_menu">
+                            <a href="index.html" class="active">Home</a>
+                        </div>
+                        <div class="router_menu">
+                            <a href="./product/all.html">Shop</a>
+                        </div>
+                        <div class="router_menu">
+                            <a href="./order/cart.html">Orders</a>
+                        </div>
+                        <div class="router_menu">
+                            <a href="./other/about.html">About</a>
+                        </div>
+                        <div class="router_menu">
+                            <a href="./other/contact.html">Contact</a>
+                        </div>
+                    </div>
+                    <div class="sorting_menu">
+                        <span>Deal of the Day</span>
+                        <span>Hoot Deals</span>
+                        <span>Best  Sellers</span>
+                        <span>New  Arrivals</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+   <div class="all_category_frame">
+        <div class="container">
+            <div class="all_category_wrapper">
+                <a href="">All Electronics </a>
+                <a href="">Smart TV  </a>
+                <a href="">Laptops </a>
+                <a href="">Cell Phones</a>
+                <a href="">Camera & Photo </a>
+                <a href="">Portable Audio </a>
+                <a href="">Computers  </a>
+                <a href="">iPad & Tablets </a>
+                <a href="">Pc Gaming </a>
+                <a href="">Smart Home </a>
+                <a href="">Headphones</a>
+
+                <div class="lined-box-1"></div>
+
+
+            </div>
+
+        </div>
+   </div>
+
+     <div class="all_main_frame">
+        <div class="container">
+            <div class="bread_crumb_box">
+                <a href="">Home &nbsp; /</a>
+                <a href="">Electronics &nbsp; /</a>
+                <a href="">Computers  &nbsp;/</a>
+                <a href="">Desktop Computers</a>
+
+            </div>
+
+            <div class="discount_box">
+                <div class="discount_box_text">
+                    <span>Save up to $130 on select laptops.</span>
+                    <p>All kind of products in one place. Starts from $1. Get cashbacks & offers</p>
+                    <a href="">Shop Deals</a>
+                </div>
+
+
+                <div class="all_pagination">
+                 <div class="pagination_box">
+
+
+                    <div class="pagination_main">
+
+                        <img src="../public/images/icons/arrow-prev_next.svg" alt="">
+
+                        <div class="pagination_dot">
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                            <div class="dot active">
+                                <div></div>
+                            </div>
+                            <div class="dot">
+                                <div></div>
+                            </div>
+                        </div>
+
+
+
+                        <img src="../public/images/icons/arrow-prev_next.svg" alt="rasm" style="transform: scaleX(-1)">
+
+
+                    </div>
+
+
+                </div>
+
+                </div>
+            </div>
+               <div class="shop_category_frame">
+                <div class="container">
+                    <div class="category_top">
+                        <span>Shop Category</span>
+                        <a href="./product/all.html">View All Categories</a>
+                    </div>
+                    <div class="category_wrapper">
+
+                         <div class="category_box">
+                            <div class="category_img_box">
+                                <img src="../public/images/category/tv.png" alt="">
+                            </div>
+                            <span>TVs, Home Theatre,  and Accessories</span>
+                        </div>
+                         <div class="category_box">
+                            <div class="category_img_box">
+                                <img src="../public/images/category/computer.png" alt="">
+                            </div>
+                            <span>Computers, Tablets, and Accessories</span>
+                        </div>
+                         <div class="category_box">
+                            <div class="category_img_box">
+                                <img src="../public/images/category/smart.png" alt="">
+                            </div>
+                            <span>Smart Home</span>
+                        </div>
+                         <div class="category_box">
+                            <div class="category_img_box">
+                                <img src="../public/images/category/headphone.png" alt="">
+                            </div>
+                            <span>Headphones and Portable Speakers</span>
+                        </div>
+                         <div class="category_box">
+                            <div class="category_img_box">
+                                <img src="../public/images/category/phone.png" alt="">
+                            </div>
+                            <span>Cell Phones and   Accessories</span>
+                        </div>
+                         <div class="category_box">
+                            <div class="category_img_box">
+                                <img src="../public/images/category/game.png" alt="">
+                            </div>
+                            <span>Video Games, Consoles,  and Accessories</span>
+                        </div>
+                    </div>
+                </div>
+
+        </div>
+
+            </div>
+        </div>
+     </div>
+
+
+
+
+
+<!--      <div class="footer_frame">-->
+<!--            <div class="container">-->
+<!--                <div class="footer_top">-->
+<!--                    <div class="footer_top_box">-->
+<!--                        <span class="top_box_title">Contact  us</span>-->
+<!--                        <div class="top_content">-->
+<!--                            <img src="./public/images/icons/phone-call.svg" alt="">-->
+<!--                            <div class="text_content">-->
+<!--                                <strong>Monday-Friday: 08am-9pm</strong><br>-->
+<!--                                <span>+(1) 123 456 7890</span>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="top_content">-->
+<!--                            <img src="./public/images/icons/email.svg" alt="">-->
+<!--                            <div class="text_content">-->
+<!--                                <strong>Need help with your order?</strong><br>-->
+<!--                                <span>support@zenmart.com</span>-->
+<!--                            </div>-->
+<!--                        </div>-->
+
+
+<!--                    </div>-->
+<!--                     <div class="footer_support_box">-->
+<!--                            <span class="top_box_title">Customer Support</span>-->
+<!--                            <a href="">Contact Us</a>-->
+<!--                            <a href="">Help Centre</a>-->
+<!--                            <a href="">Returns & Exchanges</a>-->
+<!--                            <a href="">Best Buy Financing</a>-->
+<!--                            <a href="">Best Buy Gift Card</a>-->
+
+
+
+
+
+<!--                        </div>-->
+<!--                     <div class="footer_support_box">-->
+<!--                            <span class="top_box_title">Services</span>-->
+<!--                            <a href=""> Geek Squad</a>-->
+<!--                            <a href="">In-Home Advisor</a>-->
+<!--                            <a href="">Trade-In Program</a>-->
+<!--                            <a href="">Electronics Recycling</a>-->
+<!--                            <a href="">Best Buy Health</a>-->
+
+
+
+
+
+<!--                        </div>-->
+<!--                     <div class="footer_support_box">-->
+<!--                            <span class="top_box_title">Follow  us</span>-->
+<!--                            <div class="social_box">-->
+<!--                                <i class="fa-brands fa-facebook"></i>-->
+<!--                                <i class="fa-brands fa-twitter"></i>-->
+<!--                                <i class="fa-brands fa-instagram"></i>-->
+<!--                                <i class="fa-brands fa-linkedin-in"></i>-->
+<!--                            </div>-->
+<!--                         <span class="top_box_title">Mobile Apps</span>-->
+<!--                            <div class="mobile_apps_box">-->
+<!--                                <div class="apple_logo_box">-->
+<!--                                    <img src="public/images/icons/apple_icon.png" alt="apple  logo">-->
+<!--                                    <span>IOS App</span>-->
+<!--                                </div>-->
+
+<!--                                 <div class="apple_logo_box">-->
+<!--                                    <img src="public/images/icons/android_icon.png" alt="apple  logo">-->
+<!--                                    <span>Android App</span>-->
+<!--                                </div>-->
+
+
+
+<!--                            </div>-->
+
+
+
+
+
+
+
+
+
+
+<!--                        </div>-->
+
+<!--                    <div class="payment_container">-->
+<!--                        <div class="payment_wrapper">-->
+<!--                        <div class="top_box_title">We Accept</div>-->
+<!--                        <div class="payment_box">-->
+<!--                            <a href="">-->
+<!--                                <img src="public/images/icons/visa.png" alt="">-->
+<!--                            </a>-->
+<!--                            <a href="">-->
+<!--                                <img src="public/images/icons/master_card.png" alt="">-->
+<!--                            </a>-->
+<!--                            <a href="">-->
+<!--                                <img src="public/images/icons/apple_pay.png" alt="">-->
+<!--                            </a>-->
+<!--                            <a href="">-->
+<!--                                <img src="public/images/icons/dicvover.png" alt="">-->
+<!--                            </a>-->
+<!--                            <a href="">-->
+<!--                                <img src="public/images/icons/paypal.png" alt="">-->
+<!--                            </a>-->
+<!--                            <a href="">-->
+<!--                                <img src="public/images/icons/amex.png" alt="">-->
+<!--                            </a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    </div>-->
+
+<!--                </div>-->
+
+
+
+
+
+<!--                <div class="footer_bott">-->
+<!--                    <div class="footer_bott_main">-->
+<!--                        <div class="footer_bott_left">-->
+<!--                            <span>© 2022 Zenmart. All Rights Reserved</span>-->
+<!--                            <span>Privacy  ·  Terms  ·  Sitemap</span>-->
+<!--                        </div>-->
+<!--                        <div class="footer_bott_right" style="    margin-left: 342px;">-->
+
+<!--                            <div class="footer_select_box">-->
+<!--                                <span>Currency</span>-->
+<!--                                <select name="" id="">-->
+<!--                                    <option value="USD"  selected>USD</option>-->
+<!--                                    <option value="UZS">UZS</option>-->
+<!--                                    <option value=""></option>-->
+<!--                                </select>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="footer_bott_right">-->
+
+<!--                            <div class="footer_select_box">-->
+<!--                                <span>Language</span>-->
+<!--                                <select name="" id="">-->
+<!--                                    <option value="USD"  selected>English</option>-->
+<!--                                    <option value="UZS">UZS</option>-->
+<!--                                    <option value=""></option>-->
+<!--                                </select>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 </body>
 </html>
