feat: completed  shop brand frame section view

--- a/product/all.html
+++ b/product/all.html
@@ -235,6 +235,27 @@
 
             </div>
         </div>
+
+
+  <div class="shop_brand_frame">
+    <div class="container">
+        <div class="shop_brand_wrapper">
+            <p>Shop  by  brand</p>
+            <div class="brands_box">
+                <span>Apple</span>
+                <span>Dell</span>
+                <span>hp</span>
+                <span>lenovo</span>
+                <span>samsung</span>
+                <span>asus</span>
+                <span>acer</span>
+                <span>sony</span>
+            </div>
+        </div>
+    </div>
+</div>
+
+
      </div>
 
 
