fix:  completed all content frame section view

--- a/product/all.html
+++ b/product/all.html
@@ -125,25 +125,24 @@
         </div>
    </div>
 
-     <div class="all_main_frame">
-        <div class="container">
-            <div class="bread_crumb_box">
-                <a href="">Home &nbsp; /</a>
-                <a href="">Electronics &nbsp; /</a>
-                <a href="">Computers  &nbsp;/</a>
-                <a href="">Desktop Computers</a>
+   <div class="all_content_frame">
+    <div class="container">
+        <div class="bread_crumb_box">
+            <a href="">Home &nbsp; /</a>
+            <a href="">Electronics &nbsp; /</a>
+            <a href="">Computers  &nbsp;/</a>
+            <a href="">Desktop Computers</a>
 
+        </div>
+        <div class="all_content_wrapper">
+            <div class="all_content_text">
+                <span>Save up to $130 on select laptops.</span>
+                <p>All kind of products in one place. Starts from $1. Get cashback  s & offers</p>
+                <a href="">Shop Deals</a>
             </div>
 
-            <div class="discount_box">
-                <div class="discount_box_text">
-                    <span>Save up to $130 on select laptops.</span>
-                    <p>All kind of products in one place. Starts from $1. Get cashbacks & offers</p>
-                    <a href="">Shop Deals</a>
-                </div>
-
-
-                <div class="all_pagination">
+            <div class="all_pagination">
+                 <!--        Product pagination box-->
                  <div class="pagination_box">
 
 
@@ -181,60 +180,10 @@
 
 
                 </div>
-
-                </div>
-            </div>
-               <div class="shop_category_frame">
-                <div class="container">
-                    <div class="category_top">
-                        <span>Shop Category</span>
-                        <a href="./product/all.html">View All Categories</a>
-                    </div>
-                    <div class="category_wrapper">
-
-                         <div class="category_box">
-                            <div class="category_img_box">
-                                <img src="../public/images/category/tv.png" alt="">
-                            </div>
-                            <span>TVs, Home Theatre,  and Accessories</span>
-                        </div>
-                         <div class="category_box">
-                            <div class="category_img_box">
-                                <img src="../public/images/category/computer.png" alt="">
-                            </div>
-                            <span>Computers, Tablets, and Accessories</span>
-                        </div>
-                         <div class="category_box">
-                            <div class="category_img_box">
-                                <img src="../public/images/category/smart.png" alt="">
-                            </div>
-                            <span>Smart Home</span>
-                        </div>
-                         <div class="category_box">
-                            <div class="category_img_box">
-                                <img src="../public/images/category/headphone.png" alt="">
-                            </div>
-                            <span>Headphones and Portable Speakers</span>
-                        </div>
-                         <div class="category_box">
-                            <div class="category_img_box">
-                                <img src="../public/images/category/phone.png" alt="">
-                            </div>
-                            <span>Cell Phones and   Accessories</span>
-                        </div>
-                         <div class="category_box">
-                            <div class="category_img_box">
-                                <img src="../public/images/category/game.png" alt="">
-                            </div>
-                            <span>Video Games, Consoles,  and Accessories</span>
-                        </div>
-                    </div>
-                </div>
-
-        </div>
-
             </div>
         </div>
+    </div>
+   </div>
 
 
   <div class="shop_brand_frame">
