--- a/product/choosenProduct.html
+++ b/product/choosenProduct.html
@@ -287,6 +287,23 @@
     </div>
    </div>
 
+   <div class="description_frame">
+    <div class="container">
+        <div class="description_wrapper">
+            <a href="">Description</a>
+            <a href="">Details & Specs</a>
+            <a href="">What's Included</a>
+            <a href="">Vendor</a>
+            <a href="">Return Policy</a>
+            <a href="">Questions and Answers</a>
+            <a href="">Customer Reviews</a>
+            <div></div>
+        </div>
+    </div>
+   </div>
+
+   
+
 
 
 
