feat: completed Product information section view

--- a/product/choosenProduct.html
+++ b/product/choosenProduct.html
@@ -302,7 +302,59 @@
     </div>
    </div>
 
-   
+
+   <div class="product_information_frame">
+    <div class="container">
+        <div class="product_information_wrapper">
+            <div class="top_info">
+                <p>The first notebook of its kind, this Apple MacBook Pro is a beast. With the blazing-fast M1 Pro chip — the first Apple silicon designed for pros — you get groundbreaking performance and amazing battery life. Add to that a stunning Liquid Retina XDR display, the best camera and audio ever in a Mac notebook, and all the ports you need.</p>
+            </div>
+            <div class="bott_info">
+                <div class="more_info">More Information</div>
+
+                <div class="power_info">
+                    <span>Powerful performance</span>
+
+                    <ul>
+                        <li>English-language MacBook Pro</li>
+                        <li>10-core Apple M1 Pro chip for a giant leap in CPU, GPU, and machine learning performance
+                        </li>
+                        <li>16GB of RAM so everything you do is fast and fluid
+                        </li>
+                        <li>16-core Neural Engine for advanced machine learning
+                        </li>
+                        <li>16-core GPU
+                        </li>
+                        <li>Ultrafast 1TB solid state drive (SSD) is blazing fast, so you can take all your photos and videos with you no matter.
+                        </li>
+                        
+                    </ul>
+                </div>
+
+                <div class="display_info">
+                    <span>Display and audio</span>
+
+                    <ul>
+                        <li>                        16.2-inch liquid retina XDR display delivers a responsive and natural viewing experience
+                        </li>
+                        <li>3456 x 2234 native resolution with support for millions of colours
+                        </li>
+                        <li>ProMotion technology for adaptive refresh rates up to 120Hz
+                        </li>
+                        <li>Studio-quality three-mic array with high signal-to-noise ratio and directional beamforming
+                        </li>
+                        <li>High fidelity six speaker sound system with forece-cancelling woofers
+                        </li>
+                    </ul>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+   </div>
+
+
 
 
 
