--- a/order/cart.html
+++ b/order/cart.html
@@ -81,7 +81,7 @@
                             <a href="../index.html" class="active">Home</a>
                         </div>
                         <div class="router_menu">
-                            <a href="./all.html">Shop</a>
+                            <a href="../product/all.html">Shop</a>
                         </div>
                         <div class="router_menu">
                             <a href="../order/cart.html">Orders</a>
@@ -293,42 +293,6 @@
     <!-- main frame successfully finished -->
 
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
