--- a/other/login.html
+++ b/other/login.html
@@ -2,9 +2,81 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LogIn page</title>
+
+    <link rel="stylesheet" href="../public/css/command.css">
+    <link rel="stylesheet" href="../public/css/login.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sora:wght@100..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
+
+    <div class="login_frame">
+         <div class="login_wrapper">
+            <h2>Sign-In</h2>
+
+            <div class="log_input">
+                <span>Username or email address</span>
+            <input type="text" name="text" id="text" placeholder="ALi  Tufan">
+            </div>
+
+            <div class="log_input">
+                <span>Password</span>
+            <input type="password" name="password" id="text" placeholder="Password">
+            </div>
+
+
+           
+
+            <div class="remember_box">
+               
+                <span> <input type="checkbox" name="rememver" id="remember"> Remember</span>
+                <a href="">Lost your password?</a>
+            </div>
+
+            <div class="login_butt">
+                <span>Login</span>
+            </div>
+
+            <div class="have_acc">
+                <span>Don't have an account? <a href=""><strong>Create account</strong></a></span>
+
+            </div>
+
+            <div class="or_wrapper">
+                <div class="line"></div>
+                <span class="or-text">or</span>
+                <div class="line"></div>
+              </div>
+
+
+
+              <div class="social_wrapper">
+
+                <div class="social_box">
+                    <i class="fa-brands fa-facebook-f" style="color: #0091ff;"></i>
+                </div>
+
+                <div class="social_box" style="border-color: #ff1900;">
+                    <i class="fa-brands fa-google" style="color: #ff1900;"></i>
+                </div>
+
+                <div class="social_box" style="border-color: #74C0FC;">
+                    <i class="fa-brands fa-twitter" style="color: #74C0FC;"></i>
+                </div>
+
+                <div class="social_box" style="border-color: #000000;">
+                    <i class="fa-brands fa-apple" style="color: #000000;"></i>
+                </div>
+              </div>
+
+
+
+         </div>
+    </div>
 
 </body>
 </html>
